--- a/bibtex.bib
+++ b/bibtex.bib
@@ -9,8 +9,8 @@
     url = {https://doi.org/10.1145/3123266.3123294},
     booktitle = {MM},
     keywords = {natural language processing, visual pattern discovery, event extraction, multimodal approach},
+    }
     @String(Zhang_VAD_2017="Add a brief note under the bib entry")
-    },
 
 @inproceedings{Li_WASE_2020,
     title = "Cross-media Structured Common Space for Multimedia Event Extraction",
@@ -21,22 +21,22 @@
       Lu, Di  and
       Ji, Heng  and
       Chang, Shih-Fu",
-    booktitle = "Proceedings of the 58th Annual Meeting of the Association for Computational Linguistics",
+    booktitle = "Proceedings of ACL",
     year = "2020",
     url = "https://aclanthology.org/2020.acl-main.230",
     keywords = {natural language processing, visual pattern discovery, event extraction, multimodal approach},
+    }
     @String(Li_WASE_2020="Add a brief note under the bib entry")
-    },
 
-@inproceedings{Tong_2020_ImageEE,
-  title={Image Enhanced Event Detection in News Articles},
-  author={Meihan Tong and Shuai Wang and Yixin Cao and Bin Xu and Juan-Zi Li and Lei Hou and Tat-Seng Chua},
-  booktitle={AAAI},
-  year={2020},
-  keywords = {natural language processing, visual pattern discovery, event extraction, multimodal approach},
-  @String(Tong_2020_ImageEE="Add a brief note under the bib entry")
-}
-
+@article{Tong_2020_ImageEE,
+    title = "Image Enhanced Event Detection in News Articles",
+    author = "Tong, Meihan and Wang, Shuai and Cao, Yixin and Xu, Bin and Li, Juanzi and Hou, Lei and Chua, Tat-Seng",
+    booktitle="Proceedings of AAAI",
+    year = "2020",
+    url = "https://ojs.aaai.org/index.php/AAAI/article/view/6437",
+    keywords = {natural language processing, visual pattern discovery, event extraction, multimodal approach},
+    }
+    @String(Tong_2020_ImageEE="Add a brief note under the bib entry")
 
 % ---------------- Preprint ----------------
 @article{Li_Clip_Event_2022,
@@ -55,10 +55,9 @@
   url       = {https://arxiv.org/abs/2201.05078},
   biburl    = {https://dblp.org/rec/journals/corr/abs-2201-05078.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org},
-  keywords = {natural language processing, visual pattern discovery, event extraction, multimodal approach},
+  keywords = {natural language processing, visual pattern discovery, event extraction, multimodal approach}
+  }
   @String(Li_Clip_Event_2022="Add a brief note under the bib entry")
-    },
-
 }
 
 
