--- a/bibtex.bib
+++ b/bibtex.bib
@@ -1,6 +1,8 @@
 % Example: modify keywords by the way you like.
 % Note: the keywords should be predefined in scripts/bibtext_to_md.py # fined_taxonomy
 % How to build README.md: run python scripts/bibtext_to_md.py
+
+% ---------------- Event Extraction ----------------
 @inproceedings{Zhang_VAD_2017,
     author = {Zhang, Tongtao and Whitehead, Spencer and Zhang, Hanwang and Li, Hongzhi and Ellis, Joseph and Huang, Lifu and Liu, Wei and Ji, Heng and Chang, Shih-Fu},
     title = {Improving Event Extraction via Multimodal Integration},
@@ -31,12 +33,62 @@
 @article{Tong_2020_ImageEE,
     title = "Image Enhanced Event Detection in News Articles",
     author = "Tong, Meihan and Wang, Shuai and Cao, Yixin and Xu, Bin and Li, Juanzi and Hou, Lei and Chua, Tat-Seng",
-    booktitle="Proceedings of AAAI",
+    booktitle = "Proceedings of AAAI",
     year = "2020",
     url = "https://ojs.aaai.org/index.php/AAAI/article/view/6437",
     keywords = {natural language processing, visual pattern discovery, event extraction, multimodal approach},
     }
     @String(Tong_2020_ImageEE="Add a brief note under the bib entry")
+
+@inproceedings{Chen_2021_Video,
+    title = "Joint Multimedia Event Extraction from Video and Article",
+    author = "Chen, Brian  and
+      Lin, Xudong  and
+      Thomas, Christopher  and
+      Li, Manling  and
+      Yoshida, Shoya  and
+      Chum, Lovish  and
+      Ji, Heng  and
+      Chang, Shih-Fu",
+    booktitle = "EMNLP",
+    year = "2021",
+    url = "https://aclanthology.org/2021.findings-emnlp.8",
+    keywords = {aaa},
+    }
+    @String(Chen_2021_Video="Add a brief note under the bib entry")
+
+@Article{Xiao_2022_Survey,
+    AUTHOR = {Xiao, Kejing and Qian, Zhaopeng and Qin, Biao},
+    TITLE = {A Survey of Data Representation for Multi-Modality Event Detection and Evolution},
+    JOURNAL = {Applied Sciences},
+    YEAR = {2022},
+    URL = {https://www.mdpi.com/2076-3417/12/4/2204},
+    keywords = {aaa},
+    }
+    @String(Xiao_2022_Survey="Add a brief note under the bib entry")
+
+
+% ---------------- Relation Extraction ----------------
+@misc{Chen_2022_HVPNeT,
+    title = {Good Visual Guidance Makes A Better Extractor: Hierarchical Visual Prefix for Multimodal Entity and Relation Extraction},
+    author = {Chen, Xiang and Zhang, Ningyu and Li, Lei and Yao, Yunzhi and Deng, Shumin and Tan, Chuanqi and Huang, Fei and Si, Luo and Chen, Huajun},
+    journal = {CoRR},
+    year = {2022},
+    url = {https://arxiv.org/abs/2205.03521},
+    keywords = {aaa}
+  }
+  @String(Chen_2022_HVPNeT="Add a brief note under the bib entry")
+
+@inbook{Zheng_2021_MEGA,
+    author = {Zheng, Changmeng and Feng, Junhao and Fu, Ze and Cai, Yi and Li, Qing and Wang, Tao},
+    title = {Multimodal Relation Extraction with Efficient Graph Alignment},
+    year = {2021},
+    url = {https://doi.org/10.1145/3474085.3476968},
+    booktitle = {Proceedings of MM},
+    keywords = {aaa}
+    }
+    @String(Zheng_2021_MEGA="Add a brief note under the bib entry")
+
 
 % ---------------- Preprint ----------------
 @article{Li_Clip_Event_2022,
